tests/resource/valid/error/exception_in_fun_super.mamba
class MyException(msg: Str): Exception(msg)

def g() -> Int raise [MyException] =>
    raise MyException("A")

def f(x: Int) -> Int=>
    g() handle
        err: Exception => x + 10
